# nero

./: .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix  suppressions.supp
src/: app.cc  app.hh  buffer.cc  buffer.hh  common.hh  editor.cc  editor.hh  hi.cc  hi.hh  keys.hh  main.cc  ncurses.hh  terminal.cc  terminal.hh  util.cc  util.hh
test/: CMakeLists.txt  test_example.cc
